--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,16 @@
     src: url("../fonts/monserrat/Montserrat-Regular.ttf");
 }
 
+/* .section-fixed{
+
+  width: 100%;
+  top: 0;
+  position: fixed;
+  z-index: 10;
+  background-image: url(../images/background-top-section.svg);
+} */
+
+
 
 body{
     background-image: url(../images/background-top-section.svg);
@@ -31,14 +41,19 @@ a{
     font-weight: lighter;
     color: #222;
     text-decoration: none; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    width: 200px;
 }
 
 a:hover{
   color: cornflowerblue;
   background-image: url(../images/lightbluecircle.svg);
   background-repeat: no-repeat;
-  background-size: 100px;
-  background-position: top;
+  background-size: contain;
+  background-position: center;
 }
 
 .navbar{
@@ -65,6 +80,10 @@ a:hover{
 
 .greetings:hover{
         color: cornflowerblue;
+        background-image: url(../images/greywatercolor.svg);
+        background-size: 500px;
+        background-repeat: no-repeat;
+        background-position: bottom;
 }
     
     
@@ -93,7 +112,7 @@ h1#bio-title{
 hr{
     color: gray;
     width: 1440px;
-    margin-top: 0%;
+    margin-top: 20px;
     margin-left: 8px;
     margin-right: 16px;
     margin-bottom: 20px;
